--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,137 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+..[
+    {
+        "key": "dbln",
+        "value": "%7B%22100056638555514%22%3A%22TafHe90g%22%2C%2261584235215527%22%3A%22IEU2Xzek%22%2C%2261566247862344%22%3A%22JGfRv8dX%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.167Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "datr",
+        "value": "7TwAaYLQbSKsm5hYfHdFE5Tc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "sb",
+        "value": "7TwAadBT_5NqAxkbwHebCwEJ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B754x393x2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x895",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61566247862344",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "xs",
+        "value": "11%3Ao7WDSifknUaPAg%3A2%3A1765449391%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "fr",
+        "value": "0siqWEpAR6CDTLBuW.AWcFdtal4Nf11gUshY6_LVHytpJnjKmsuH3Uw48vTly1GtxUZZU.BpCqoe..AAA.0.0.BpOp6y.AWdNz82P2ySosXY7seAeI3yVgUA",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "pas",
+        "value": "100056638555514%3AUEXwBL3wPv%2C100034107230946%3AZotsgfNvbs%2C61584235215527%3A65goXXTxeF%2C61566247862344%3AFwgDglxbOF",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101238618%3BT%3A29424156",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A3013%3Btimestamp%3A1765449394",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-11T10:37:16.168Z",
+        "lastAccessed": "2025-12-11T10:37:16.168Z"
+    }
+]
